--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-4-react": "^0.0.59",
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
